@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Launchpad #213311:  Handle "unsubscriptable object" errors
+        during publishing traversal.
+
       - Launchpad #143813: zopectl now exits non-zero when
         child processes fail.
 
